webpack dev server works. working cannon example

--- a/src/index.html
+++ b/src/index.html
@@ -22,5 +22,5 @@
       <button>Add Sphere</button>
       <button>Add Box</button>
     </div>
-  <script type="text/javascript" src="app.main.js"></script></body>
+  </body>
 </html>
